[package]
name = "riffle"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_bencode = "^0.2.4"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "^0.11.14"
anyhow= "^1.0.83"
thiserror= "^1.0.60"
sha1="^0.10.6"
hex="^0.4.3"
urlencoding="^2.1.3"
futures="^0.3.30"
futures-signals="^0.3.33"
crossbeam-channel="^0.5.12"
ratatui = "0.26.2"
crossterm = "0.27.0"
color-eyre = "0.6.2"
tokio-util = "0.7.9"